force-app/main/default/objects/Binarybespoke__c/Binarybespoke__c.object-meta.xml
<CustomObject>
    <description>Test Object</description>
    <label>Binarybespoke</label>
    <nameField>
        <displayFormat>BB-{0000}</displayFormat>
        <label>Binarybespoke Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Binarybespokes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>