force-app/main/default/objects/Binarybespoke__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <label>Child</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1C1</fullName>
            </value>
            <value>
                <fullName>P1C2</fullName>
            </value>
            <value>
                <fullName>P2C1</fullName>
            </value>
            <value>
                <fullName>P2C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>