force-app/main/default/objects/Binarybespoke__c/fields/Dummypicklist__c.field-meta.xml
<CustomField>
    <fullName>Dummypicklist__c</fullName>
    <label>Dummypicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foo</fullName>
            </value>
            <value>
                <fullName>Boo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>