force-app/main/default/objects/Binarybespoke__c/fields/DummypicklistChild__c.field-meta.xml
<CustomField>
    <fullName>DummypicklistChild__c</fullName>
    <label>DummypicklistChild</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dummypicklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FooC1</fullName>
            </value>
            <value>
                <fullName>FooC2</fullName>
            </value>
            <value>
                <fullName>BooC1</fullName>
            </value>
            <value>
                <fullName>BooC2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>