force-app/main/default/objects/Binarybespoke__c/fields/Grandchild__c.field-meta.xml
<CustomField>
    <fullName>Grandchild__c</fullName>
    <label>Grandchild</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Child__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1C1GC1</fullName>
            </value>
            <value>
                <fullName>P1C1GC2</fullName>
            </value>
            <value>
                <fullName>P1C2GC1</fullName>
            </value>
            <value>
                <fullName>P1C2GC2</fullName>
            </value>
            <value>
                <fullName>P2C1GC1</fullName>
            </value>
            <value>
                <fullName>P2C1GC2</fullName>
            </value>
            <value>
                <fullName>P2C2GC1</fullName>
            </value>
            <value>
                <fullName>P2C2GC2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>